# backend/order/api/mapService/mapService.pb.go
@@ -1,0 +1,210 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        v5.29.3
+// source: mapService/mapService.proto
+
+package mapService
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetDrivingInfoRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Origin        string                 `protobuf:"bytes,1,opt,name=origin,proto3" json:"origin,omitempty"`
+	Destination   string                 `protobuf:"bytes,2,opt,name=destination,proto3" json:"destination,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetDrivingInfoRequest) Reset() {
+	*x = GetDrivingInfoRequest{}
+	mi := &file_mapService_mapService_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetDrivingInfoRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetDrivingInfoRequest) ProtoMessage() {}
+
+func (x *GetDrivingInfoRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_mapService_mapService_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetDrivingInfoRequest.ProtoReflect.Descriptor instead.
+func (*GetDrivingInfoRequest) Descriptor() ([]byte, []int) {
+	return file_mapService_mapService_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetDrivingInfoRequest) GetOrigin() string {
+	if x != nil {
+		return x.Origin
+	}
+	return ""
+}
+
+func (x *GetDrivingInfoRequest) GetDestination() string {
+	if x != nil {
+		return x.Destination
+	}
+	return ""
+}
+
+type GetDrivingInfoReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Origin        string                 `protobuf:"bytes,1,opt,name=origin,proto3" json:"origin,omitempty"`
+	Destination   string                 `protobuf:"bytes,2,opt,name=destination,proto3" json:"destination,omitempty"`
+	Distance      string                 `protobuf:"bytes,3,opt,name=distance,proto3" json:"distance,omitempty"`
+	Duration      string                 `protobuf:"bytes,4,opt,name=duration,proto3" json:"duration,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetDrivingInfoReply) Reset() {
+	*x = GetDrivingInfoReply{}
+	mi := &file_mapService_mapService_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetDrivingInfoReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetDrivingInfoReply) ProtoMessage() {}
+
+func (x *GetDrivingInfoReply) ProtoReflect() protoreflect.Message {
+	mi := &file_mapService_mapService_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetDrivingInfoReply.ProtoReflect.Descriptor instead.
+func (*GetDrivingInfoReply) Descriptor() ([]byte, []int) {
+	return file_mapService_mapService_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetDrivingInfoReply) GetOrigin() string {
+	if x != nil {
+		return x.Origin
+	}
+	return ""
+}
+
+func (x *GetDrivingInfoReply) GetDestination() string {
+	if x != nil {
+		return x.Destination
+	}
+	return ""
+}
+
+func (x *GetDrivingInfoReply) GetDistance() string {
+	if x != nil {
+		return x.Distance
+	}
+	return ""
+}
+
+func (x *GetDrivingInfoReply) GetDuration() string {
+	if x != nil {
+		return x.Duration
+	}
+	return ""
+}
+
+var File_mapService_mapService_proto protoreflect.FileDescriptor
+
+const file_mapService_mapService_proto_rawDesc = "" +
+	"\n" +
+	"\x1bmapService/mapService.proto\x12\x0eapi.mapService\"Q\n" +
+	"\x15GetDrivingInfoRequest\x12\x16\n" +
+	"\x06origin\x18\x01 \x01(\tR\x06origin\x12 \n" +
+	"\vdestination\x18\x02 \x01(\tR\vdestination\"\x87\x01\n" +
+	"\x13GetDrivingInfoReply\x12\x16\n" +
+	"\x06origin\x18\x01 \x01(\tR\x06origin\x12 \n" +
+	"\vdestination\x18\x02 \x01(\tR\vdestination\x12\x1a\n" +
+	"\bdistance\x18\x03 \x01(\tR\bdistance\x12\x1a\n" +
+	"\bduration\x18\x04 \x01(\tR\bduration2j\n" +
+	"\n" +
+	"MapService\x12\\\n" +
+	"\x0eGetDrivingInfo\x12%.api.mapService.GetDrivingInfoRequest\x1a#.api.mapService.GetDrivingInfoReplyB!Z\x1forder/api/mapService;mapServiceb\x06proto3"
+
+var (
+	file_mapService_mapService_proto_rawDescOnce sync.Once
+	file_mapService_mapService_proto_rawDescData []byte
+)
+
+func file_mapService_mapService_proto_rawDescGZIP() []byte {
+	file_mapService_mapService_proto_rawDescOnce.Do(func() {
+		file_mapService_mapService_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_mapService_mapService_proto_rawDesc), len(file_mapService_mapService_proto_rawDesc)))
+	})
+	return file_mapService_mapService_proto_rawDescData
+}
+
+var file_mapService_mapService_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_mapService_mapService_proto_goTypes = []any{
+	(*GetDrivingInfoRequest)(nil), // 0: api.mapService.GetDrivingInfoRequest
+	(*GetDrivingInfoReply)(nil),   // 1: api.mapService.GetDrivingInfoReply
+}
+var file_mapService_mapService_proto_depIdxs = []int32{
+	0, // 0: api.mapService.MapService.GetDrivingInfo:input_type -> api.mapService.GetDrivingInfoRequest
+	1, // 1: api.mapService.MapService.GetDrivingInfo:output_type -> api.mapService.GetDrivingInfoReply
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_mapService_mapService_proto_init() }
+func file_mapService_mapService_proto_init() {
+	if File_mapService_mapService_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_mapService_mapService_proto_rawDesc), len(file_mapService_mapService_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_mapService_mapService_proto_goTypes,
+		DependencyIndexes: file_mapService_mapService_proto_depIdxs,
+		MessageInfos:      file_mapService_mapService_proto_msgTypes,
+	}.Build()
+	File_mapService_mapService_proto = out.File
+	file_mapService_mapService_proto_goTypes = nil
+	file_mapService_mapService_proto_depIdxs = nil
+}
