# backend/order/api/order/order_http.pb.go
@@ -1,0 +1,120 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             v5.29.3
+// source: api/order/order.proto
+
+package order
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationOrderCreateOrder = "/api.order.Order/CreateOrder"
+const OperationOrderGetEstimatePrice = "/api.order.Order/GetEstimatePrice"
+
+type OrderHTTPServer interface {
+	// CreateOrder 创建订单
+	CreateOrder(context.Context, *CreateOrderRequest) (*CreateOrderReply, error)
+	// GetEstimatePrice 预估价格
+	GetEstimatePrice(context.Context, *GetEstimatePriceRequest) (*GetEstimatePriceReply, error)
+}
+
+func RegisterOrderHTTPServer(s *http.Server, srv OrderHTTPServer) {
+	r := s.Route("/")
+	r.POST("/orders", _Order_CreateOrder0_HTTP_Handler(srv))
+	r.GET("/orders/estimate-price", _Order_GetEstimatePrice0_HTTP_Handler(srv))
+}
+
+func _Order_CreateOrder0_HTTP_Handler(srv OrderHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CreateOrderRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationOrderCreateOrder)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CreateOrder(ctx, req.(*CreateOrderRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CreateOrderReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Order_GetEstimatePrice0_HTTP_Handler(srv OrderHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetEstimatePriceRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationOrderGetEstimatePrice)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetEstimatePrice(ctx, req.(*GetEstimatePriceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetEstimatePriceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type OrderHTTPClient interface {
+	// CreateOrder 创建订单
+	CreateOrder(ctx context.Context, req *CreateOrderRequest, opts ...http.CallOption) (rsp *CreateOrderReply, err error)
+	// GetEstimatePrice 预估价格
+	GetEstimatePrice(ctx context.Context, req *GetEstimatePriceRequest, opts ...http.CallOption) (rsp *GetEstimatePriceReply, err error)
+}
+
+type OrderHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewOrderHTTPClient(client *http.Client) OrderHTTPClient {
+	return &OrderHTTPClientImpl{client}
+}
+
+// CreateOrder 创建订单
+func (c *OrderHTTPClientImpl) CreateOrder(ctx context.Context, in *CreateOrderRequest, opts ...http.CallOption) (*CreateOrderReply, error) {
+	var out CreateOrderReply
+	pattern := "/orders"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationOrderCreateOrder))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// GetEstimatePrice 预估价格
+func (c *OrderHTTPClientImpl) GetEstimatePrice(ctx context.Context, in *GetEstimatePriceRequest, opts ...http.CallOption) (*GetEstimatePriceReply, error) {
+	var out GetEstimatePriceReply
+	pattern := "/orders/estimate-price"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationOrderGetEstimatePrice))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
